krb-754 fix gap og font-størrelse for spesifikasjon-Produktside

--- a/src/pages/SpecEditor/EditProduct/ProductHeader/ProductHeader.module.scss
+++ b/src/pages/SpecEditor/EditProduct/ProductHeader/ProductHeader.module.scss
@@ -19,6 +19,12 @@
   }
 }
 
+.ProductOverview {
+  display: flex;
+  flex-direction: column;
+  gap: var(--small-gap);
+}
+
 .EditProduct {
   &__description {
     div {
