--- a/src/pages/Stylesheets/EditorFullPage.module.scss
+++ b/src/pages/Stylesheets/EditorFullPage.module.scss
@@ -94,10 +94,6 @@
       }
     }
 
-    .Need {
-      margin: var(--normal-gap) 0 0;
-    }
-
     .Percentage {
       display: flex;
       justify-content: flex-end;
